# MISEIA_1-6-10-revproxy-c

./: .clang-format  .clang-tidy  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  RETROSPECTIVA-2026-05-02.md  RETROSPECTIVA-2026-06-29.md  RUN_PROJECT_AND_TEST.md  SPEC.md  docker-compose.yml  index.html  meson.build  meson.options  mingw64.ini  proxy.toml  proxy.toml.example  proxy_integration_test.toml  proxy_test.toml
.github/workflows/: ci.yml
docs/: AI_COLLABORATION.md  requirements.md
docs/adr/: ADR-001-epoll-edge-triggered.md  ADR-002-lock-free-round-robin.md  ADR-003-atomic-config-reload.md  ADR-004-thread-per-core-workers.md  ADR-005-meson-build-system.md  README.md
docs/benchmarks/: results.md
docs/compliance/: 001_env_example_fn_prompt.md  002_linter_config_fn_prompt.md  003_decisions_doc_fn_prompt.md  004_ai_changes_doc_fn_prompt.md  005_adrs_doc_fn_prompt.md  006_coverage_report_fn_prompt.md  007_ci_github_fn_prompt.md  007_ci_gitlab_fn_prompt.md  008_deploy_instructions_fn_prompt.md  009_quantitative_bench_fn_prompt.md  010_deploy_public_fn_prompt.md  compliance_report.md  env.production  pert_compliance_plan.md
docs/coverage/: README.md
docs/prompts/: feature_001_html_project_page_prompt.md  feature_002_nginx_traefik_ssl_prompt.md
platform/: epoll.c  iocp.c
src/: balancer.c  balancer.h  config.c  config.h  dispatcher.c  dispatcher.h  event_loop.h  listener.c  listener.h  log.c  log.h  main.c  meson.build  router.c  router.h  tunnel.c  tunnel.h  utils.c  utils.h
tests/: meson.build  mock_server.c  run_integration.ps1  run_integration.sh  run_loadtest.ps1  test_balancer.c  test_config.c  test_router.c
